delete and rebuild all tuners when alltraditionalhdhr setting changed