@@ -56,7 +56,7 @@ public class BuildExeFromClassFilesLinux {
         boolean forceRevisionNumber = true; //>>>>>>>>>>>>>>>>>>>>>>>>>>>>
         String revision = "999";
         if (forceRevisionNumber) {
-            revision = "1094";
+            revision = "1095";
         } else {
         	String fullVersion = ""; 
         	try {
@@ -173,6 +173,7 @@ public class BuildExeFromClassFilesLinux {
         attributes.put(Attributes.Name.CLASS_PATH, ".");
         attributes.put(Attributes.Name.MAIN_CLASS, "org.cwepg.hr.ServiceLauncher");
         attributes.put(new Attributes.Name("SplashScreen-Image"), "CW_Logo.jpg");
+        attributes.put(new Attributes.Name("Add-Opens"), "java.prefs/java.util.prefs java.base/java.lang");
         
         // Read the build information from the project and make some definitions
     	ClasspathReader reader = new ClasspathReader(CLASSPATH_CONFIG_FILE, PROJECT_DIRECTORY);
